--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,7 +36,7 @@ order: 4
     <form name="contact-form" method="post" class="col-md-10 offset-md-1 col-sm-12" netlify>
       <!-- Nom -->
       <div class="mb-3">
-        <label class="form-label" for="name">Votre nom :</label>
+        <label class="form-label" for="name">Vos prénom et nom :</label>
         <input class="form-control" id="name" name="name" required />
       </div>
       <!-- Mail -->
@@ -46,7 +46,7 @@ order: 4
       </div>
       <!-- Text -->
       <div class="mb-3">
-        <label class="form-label" for="question">Votre question ou demande : </label>
+        <label class="form-label" for="question">Votre question, demande ou candidature : </label>
         <textarea class="form-control" id="question" name="question" rows="5"></textarea>
       </div>
       <!-- Envoyer -->
