--- a/pages/offre.html
+++ b/pages/offre.html
@@ -34,7 +34,7 @@ order: 1
   <div class="container">
     <div class="row">
       <h1 class="section-heading">Vision globale du développement logiciel</h1>
-      <h2 class="section-subheading">Nous sécurisons l’ensemble des facettes d’un développement applicatif</h2>
+      <h2 class="section-subheading">Nous sécurisons l’ensemble du développement applicatif</h2>
     </div>
     
     <div class="items-container">
@@ -44,7 +44,7 @@ order: 1
             Centrée utilisateur
             <span class="info-icon">i</span>
             <!-- info popover -->
-            <span class="info-data">Toutes nos applis sont testestestestestes testsToutes nos applis sont testestestestestes testsToutes</span>
+            <span class="info-data">TODO: ajouter texte</span>
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
@@ -52,7 +52,7 @@ order: 1
             Pérennité technique de la solution développée
             <span class="info-icon">i</span>
             <!-- info popover -->
-            <span class="info-data">TODO: add info-data</span>
+            <span class="info-data">TODO: ajouter texte</span>
           </div>
         </div>
       </div>
@@ -61,14 +61,14 @@ order: 1
           <div id="item-3" class="item">
             Amélioration continue
             <span class="info-icon">i</span>
-            <span class="info-data">TODO: add info-data</span>
+            <span class="info-data">TODO: ajouter texte</span>
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
           <div id="item-4" class="item">
             Facilités de déploiement et d’infogérance
             <span class="info-icon">i</span>
-            <span class="info-data">TODO: add info-data</span>
+            <span class="info-data">TODO: ajouter texte</span>
           </div>
         </div>
       </div>
@@ -77,7 +77,7 @@ order: 1
           <div id="item-5" class="item">
             Gestion de problématiques techniques transverses
             <span class="info-icon">i</span>
-            <span class="info-data">TODO: add info-data</span>
+            <span class="info-data">TODO: ajouter texte</span>
           </div>
         </div>
       </div>
@@ -178,7 +178,7 @@ order: 1
         <h1 class="title">4 - Je souhaite désengorger ma dette technique ou challenger ma stack technique</h1>
         <ul class="arrow-list description">
           <li>Expertise technique</li>
-          <li>Etude d’impact</li>
+          <li>Audit / Étude d’impact</li>
           <li>Re-développement, re-conception, re-architecture</li>
         </ul>
 
@@ -224,6 +224,7 @@ order: 1
         <ul class="arrow-list description">
           <li>DevOps</li>
           <li>AWS, GCP, Alibaba, Azure, PlayStore, AppStore</li>
+          <li>Docker, Kubernetes</li>
         </ul>
 
         <div class="row logo-entreprise-container">
@@ -249,7 +250,7 @@ order: 1
 
     <div class="row">
       <h2 class="title">Contrat</h2>
-      <p>Quelle que soit la prestation, nous pouvons contracter en engagement de résultats (forfaitaire : budget, qualité, délai) ou en engagement de moyens (volume défini de jours à produire sur une période).</p>
+      <p>Quelle que soit la prestation, nous pouvons contracter en engagement de résultats (forfaitaire : budget, qualité, délai) ou en engagement de moyens (volume défini de jours ou points de complexités à produire sur une période).</p>
       <p>La meilleure solution pour une relation de confiance client - DEVmachine est alors choisie d’un commun accord.</p>
     </div>
 
@@ -261,8 +262,8 @@ order: 1
 
     <div class="row">
       <h2 class="title">Localisation</h2>
-      <p>Nous travaillons très majoritairement dans nos locaux, et sommes par nature très à l’aise et efficaces dans cette organisation, avant même les premiers confinements en 2020.</p>
-      <p>Nous intervenons chez nos clients lorsque c'est nécessaire. Cette organisation permet à chaque équipe DEVmachine de bénéficier du savoir-faire des autres équipes pour, au final, délivrer avec un haut niveau de qualité.</p>
+      <p>Nous travaillons très majoritairement dans nos locaux, et sommes par nature très à l’aise et efficaces dans cette organisation, avant même les premiers confinements en 2020. Nous intervenons chez nos clients lorsque c'est nécessaire.</p>
+      <p>Cette organisation permet à chaque équipe DEVmachine de bénéficier du savoir-faire des autres équipes pour, au final, délivrer avec un haut niveau de qualité.</p>
     </div>
   </div>
 </section>
@@ -297,7 +298,7 @@ order: 1
       </div>
     </div>
     <a class="dm-btn dm-btn-orange" href="/savoir-faire">
-      Découvrir notre savoir-faire<span aria-hidden="true" class="fas fa-chevron-right"></span>
+      Découvrir nos savoir-faire<span aria-hidden="true" class="fas fa-chevron-right"></span>
     </a>
   </div>
 </section>
