--- a/pages/recrutement.html
+++ b/pages/recrutement.html
@@ -13,6 +13,10 @@ order: 6
           <p class="text-blue"><b>Séduit par notre approche du métier ?<br />En phase avec nos valeurs ?</b></p>
           <p class="text-grey">Nous recherchons en continu sur Rennes des DevOps, des développeurs front JS, des développeurs back Java ou JS, et des développeurs full-stack pour enrichir l'équipe et participer à cette belle aventure.</p>
         </div>
+
+        <div class="row btn-container">
+          <a class="dm-btn dm-btn-blue" href="/contact">Envoyer une candidature spontanée !</a>
+        </div>
       </div>
 
       <div class="col-md-6 col-sm-12 right-img">
