--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -9,7 +9,7 @@ order: 2
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <div>
-          <h1 class="section-heading">Le savoir-faire DEVmachine</h1>
+          <h1 class="section-heading">Les savoir-faire DEVmachine</h1>
           <p><b>Nous construisons les projets de nos clients dans une approche qui se veut à la fois qualitative, efficace, technique, et industrialisée.</b></p>
           <p class="text-grey">Elle repose sur les compétences et qualités individuelles de chacun, et aussi sur la force du collectif DEVmachine.</p>
         </div>
