feat: ajout de description RSE

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -40,10 +40,6 @@ order: 3
       <h2 class="section-subheading">En écho aux prestations que nous réalisons en équipe, nous construisons également DEVmachine en équipe</h2>
     </div>
 
-    <div class="row">
-      <h6 class="text-orange ml-auto mr-auto mt-3">3 exemples pour illustrer :</h6>
-    </div>
-
     <div class="row align-items-center dm-item">
       <div class="col-md-8 col-sm-12">
         <h2>La co-construction</h2>
@@ -103,16 +99,22 @@ order: 3
     </div>
 
     <div class="row align-items-center dm-item sm-reverse">
-      <div class="col-md-6 col-sm-12 text-center">
+      <div class="col-md-4 offset-md-1 col-sm-12 offset-sm-0 text-center">
         <img class="bretagne" alt="" src="/assets/images/website/page-dm/servir/Bretagne.svg"/>
-        <div class="produit-bretagne">
-          <img alt="" src="/assets/images/website/page-dm/servir/produit-bretagne.png"/>
-          <p>Depuis 2022, DEVmachine est adhérent du réseau "Produit en Bretagne", étendard de savoir-faire de la région Bretagne.</p>
-        </div>
       </div>
       <div class="col-md-6 col-sm-12">
         <h2>Implantés à Rennes et Lannion</h2>
         <p class="text-justify">Aujourd’hui, nous sommes implantés sur <b>Rennes</b> (locaux à Cesson-Sévigné) et <b>Lannion</b> (en espace de co-working pour l’instant).</p>
+      </div>
+    </div>
+
+    <div class="row align-items-center dm-item sm-reverse">
+      <div class="col-md-3 offset-md-2 col-sm-12 offset-sm-0 text-center">
+        <img class="produit-bretagne" alt="" src="/assets/images/website/page-dm/servir/produit-bretagne.png"/>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <h2>Adhérent "Produit en Bretagne"</h2>
+        <p class="text-justify">Depuis 2022, DEVmachine est adhérent du réseau "Produit en Bretagne", étendard de savoir-faire de la région Bretagne.</p>
       </div>
     </div>
 
@@ -163,10 +165,51 @@ order: 3
       </div>
 
       <div class="rse-subitems">
-        <p class="col-lg-3 col-md-6 col-sm-12">Conditions de travail</p>
-        <p class="col-lg-3 col-md-6 col-sm-12">Partage des richesses</p>
-        <p class="col-lg-3 col-md-6 col-sm-12">Santé psychologique</p>
-        <p class="col-lg-3 col-md-6 col-sm-12">Développement des compétences</p>
+        <span class="col-lg-3 col-md-6 col-sm-12 info">
+          <p>Conditions de travail</p>
+          <div class="rse-onhover-items">
+            <ul class="arrow-list">
+              <li>Poste de travail / matériel :</li>
+                <ul>
+                  <li>Chacun est libre de choisir son matériel, son IDE, sa souris, son nombre d’écrans.</li>
+                  <li>Bureaux assis-debout, chaises de bureaux inclinables et à roulettes, chaise ballon à la demande</li>
+                </ul>
+              <li>Locaux spacieux et lumineux, entourés de verdure (photos)</li>
+              <li>Télétravail sans limites basse/haute, dès la création de la société et bien avant le premier confinement en 2020.</li>
+              <li>Cuisine équipée pour prendre ses repas sur place le midi</li>
+            </ul>
+          </div>
+        </span>
+        <span class="col-lg-3 col-md-6 col-sm-12 info">
+          <p>Partage des richesses</p>
+          <div class="rse-onhover-items">
+            <ul class="arrow-list">
+              <li>Contrat d’intéressement : comme décidé à la création de la société, nous avons signé avant les 2 ans d’existence de DEVmachine, le contrat d’intéressement pour redistribuer aux salariés une part significative des bénéfices réalisés par l’entreprise, à part égale quel que soit la fonction et le salaire de chacun.</li>
+              <li>Chèques cadeaux</li>
+              <li>Primes projets</li>
+            </ul>
+          </div>
+        </span>
+        <span class="col-lg-3 col-md-6 col-sm-12 info">
+          <p>Santé psychologique</p>
+          <div class="rse-onhover-items">
+            <ul class="arrow-list">
+              <li>Implication de tous dans la co-construction de DEVmachine, dans la stratégie de développement de DEVmachine (Comité d’Orientation)</li>
+              <li>Entretiens RH réguliers : rapport d’étonnement à l’arrivée, mi-période d’essai, fin de période d’essai, entretiens RH semestriels, entretiens d’équipes spécifiques aux projets, entretien annuel, …</li>
+            </ul>
+          </div>
+        </span>
+        <span class="col-lg-3 col-md-6 col-sm-12 info">
+          <p>Développement des compétences</p>
+          <div class="rse-onhover-items shift-left">
+            <ul class="arrow-list">
+              <li>Présentations internes de technologies, solutions et bonnes pratiques</li>
+              <li>Participation à des conférences et meet-up</li>
+              <li>Formations auprès d’organismes externes </li>
+              <li>Auto-formation / veille technologique interne</li>
+            </ul>
+          </div>
+        </span>
       </div>
     </div>
 
@@ -178,7 +221,7 @@ order: 3
       <div class="rse-subitems">
         <span class="col-lg-4 col-md-6 col-sm-12 info">
           <p>Limitation des temps de trajets et de la circulation automobile</p>
-          <div id="environnemental-items">
+          <div class="rse-onhover-items">
             <ul class="arrow-list">
               <li>Choix collectif de la localisation des locaux au plus près des domiciles de l’équipe et à proximité immédiate des transports en commun (bus, train) et des services de restauration.</li>
               <li>Mise en place du télétravail dès la création de la société pour un meilleur équilibre vie pro. - vie perso.</li>
@@ -187,19 +230,49 @@ order: 3
             </ul>
           </div>
         </span>
-        <p class="col-lg-4 col-md-6 col-sm-12">Consommation vertueuse / tri</p>
-        <p class="col-lg-4 offset-lg-0 col-md-6 offset-md-3 col-sm-12">Soutien à des actions en faveur de l’environnement ou de programmes humanitaires</p>
+        <span class="col-lg-4 col-md-6 col-sm-12 info">
+          <p>Consommation vertueuse / tri</p>
+          <div class="rse-onhover-items">
+            <ul class="arrow-list">
+              <li>Tri sélectif, recyclage des déchets</li>
+              <li>Achats de produits biologiques et équitables</li>
+              <li>Suppression des goodies inutiles</li>
+              <li>Pas de gobelets plastiques</li>
+              <li>Consommation de l’eau du robinet</li>
+              <li>Mise en place d’interrupteurs sur les prises électriques pour éviter de mettre le matériel en veille</li>
+            </ul>
+          </div>
+        </span>
+        <span class="col-lg-4 offset-lg-0 col-md-6 offset-md-3 col-sm-12 info">
+          <p>Soutien à des actions en faveur de l’environnement ou de programmes humanitaires</p>
+          <div class="rse-onhover-items shift-left">
+            <ul class="arrow-list">
+              <li>Depuis 2021, DEVmachine est actionnaire du fonds d’investissement Time for the planet https://www.time-planet.com/fr pour financer des programmes en faveur de la lutte contre le réchauffement climatique.</li>
+              <li>DEVmachine a participé pour la 1ère fois au Marathon Vert de Rennes en 2021 : "1km parcouru = 1 arbre planté"</li>
+            </ul>
+          </div>
+        </span>
       </div>
     </div>
 
     <div class="rse-item" id="societal">
       <div class="d-flex">
+        <img class="confettis" alt="" src="/assets/images/website/page-dm/rse/Confettis.svg" />
         <p class="title mb-0 mr-3">Sociétal</p>
-        <!-- <img class="confettis" alt="" src="" /> -->
       </div>
       <div class="rse-subitems">
-        <p class="col-md-6 col-sm-12">DEVmachine fait appel à l’ESAT Utopi</p>
-        <p class="col-md-6 col-sm-12">DEVmachine reverse tous les ans sa taxe d’apprentissage à l’association FACE (“Fondation Agir Contre l’Exclusion”)</p>
+        <span class="col-md-6 col-sm-12 info">
+          <p>DEVmachine fait appel à l’ESAT Utopi</p>
+          <div class="rse-onhover-items">
+            DEVmachine fait appel à <a href="https://www.adapei35.com/etablissement/esat-rennes-utopi-cesson-sevigne/" target="_blank">Utopi</a> pour les prestations de nettoyage de ses locaux.
+          </div>
+        </span>
+        <span class="col-md-6 col-sm-12 info">
+          <p>DEVmachine reverse tous les ans sa taxe d’apprentissage à l’association FACE (“Fondation Agir Contre l’Exclusion”)</p>
+          <div class="rse-onhover-items">
+            <a href="https://www.fondationface.org/" target="_blank">FACE</a> (Fondation Agir Contre l’Exclusion) lutte contre l’exclusion, les discriminations et la pauvreté.
+          </div>
+        </span>
       </div>
     </div>
   </div>
