feat: ajout logos entreprise

--- a/pages/offre.html
+++ b/pages/offre.html
@@ -105,8 +105,7 @@ order: 1
         
         <div class="row logo-entreprise-container">
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/fake-logo.svg" />
-            <p>entreprise</p>
+            <img alt="" src="/assets/images/website/page-offre/prestations/logos/tysilio.png" />
           </div>
         </div>
       </div>
@@ -135,12 +134,13 @@ order: 1
 
         <div class="row logo-entreprise-container">
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/fake-logo.svg" />
-            <p>entreprise</p>
+            <img alt="" src="/assets/images/website/page-offre/prestations/logos/dome.svg" />
           </div>
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/fake-logo.svg" />
-            <p>entreprise</p>
+            <img alt="" src="/assets/images/website/page-offre/prestations/logos/sharly.svg" />
+          </div>
+          <div class="logo-entreprise bg-blue">
+            <img alt="" src="/assets/images/website/page-offre/prestations/logos/biocoop.png" />
           </div>
         </div>
       </div>
@@ -157,8 +157,7 @@ order: 1
 
         <div class="row logo-entreprise-container">
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/fake-logo.svg" />
-            <p>entreprise</p>
+            <img alt="" src="/assets/images/website/page-offre/prestations/logos/mgdis.png" />
           </div>
         </div>
       </div>
@@ -184,8 +183,7 @@ order: 1
 
         <div class="row logo-entreprise-container">
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/fake-logo.svg" />
-            <p>entreprise</p>
+            <img alt="" src="/assets/images/website/page-offre/prestations/logos/dome.svg" />
           </div>
         </div>
       </div>
@@ -202,8 +200,10 @@ order: 1
 
         <div class="row logo-entreprise-container">
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/fake-logo.svg" />
-            <p>entreprise</p>
+            <img alt="" src="/assets/images/website/page-offre/prestations/logos/cooperl.svg" />
+          </div>
+          <div class="logo-entreprise bg-white">
+            <img alt="" src="/assets/images/website/page-offre/prestations/logos/sharly.svg" />
           </div>
         </div>
       </div>
@@ -228,13 +228,11 @@ order: 1
         </ul>
 
         <div class="row logo-entreprise-container">
-          <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/fake-logo.svg" />
-            <p>entreprise</p>
+          <div class="logo-entreprise bg-blue">
+            <img alt="" src="/assets/images/website/page-offre/prestations/logos/cooperl.svg" />
           </div>
           <div class="logo-entreprise">
-            <img alt="" src="/assets/images/website/page-offre/fake-logo.svg" />
-            <p>entreprise</p>
+            <img alt="" src="/assets/images/website/page-offre/prestations/logos/ouest-france.svg" />
           </div>
         </div>
       </div>
