feat: offre rouage css

--- a/pages/offre.html
+++ b/pages/offre.html
@@ -41,43 +41,69 @@ order: 1
       <div class="row items-row">
         <div class="col-md-6 col-sm-12">
           <div id="item-1" class="item">
-            Centrée utilisateur
+            <p>Centrée utilisateur</p>
             <span class="info-icon">i</span>
-            <!-- info popover -->
-            <span class="info-data">TODO: ajouter texte</span>
+            <span class="info-data bigger">
+              <ul class="arrow-list">
+                <li>Couverture fonctionnelle répondant au besoin</li>
+                <li>UX : rendre la solution ergonomique à l’usage</li>
+                <li>UI : rendre le design attractif et en accord avec la charte graphique souhaitée</li>
+              </ul>
+            </span>
           </div>
         </div>
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-6 col-sm-12 d-md-flex justify-content-md-end">
           <div id="item-2" class="item">
-            Pérennité technique de la solution développée
+            <p>Amélioration continue</p>
             <span class="info-icon">i</span>
-            <!-- info popover -->
-            <span class="info-data">TODO: ajouter texte</span>
+            <span class="info-data">
+              <ul class="arrow-list">
+                <li>Industrialisation</li>
+                <li>Automatisation</li>
+              </ul>
+            </span>
           </div>
         </div>
       </div>
       <div class="row items-row">
         <div class="col-md-6 col-sm-12">
           <div id="item-3" class="item">
-            Amélioration continue
+            <p>Pérennité technique de la solution développée</p>
             <span class="info-icon">i</span>
-            <span class="info-data">TODO: ajouter texte</span>
+            <span class="info-data bigger lower">
+              <ul class="arrow-list">
+                <li>Architecture : évolutivité, capacité d’intégration avec un existant, scalabilité</li>
+                <li>Conception : pertinence et standardisation des composants techniques</li>
+                <li>Développement : qualité du code, bonnes pratiques</li>
+                <li>Tests : robustesse, couverture de tests</li>
+              </ul>
+            </span>
           </div>
         </div>
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-6 col-sm-12 d-md-flex justify-content-md-end">
           <div id="item-4" class="item">
-            Facilités de déploiement et d’infogérance
+            <p>Facilités de déploiement et d’infogérance</p>
             <span class="info-icon">i</span>
-            <span class="info-data">TODO: ajouter texte</span>
+            <span class="info-data lower">
+              <ul class="arrow-list">
+                <li>On Premise ou Cloud : AWS, GCP, Azure, Alibaba</li>
+              </ul>
+            </span>
           </div>
         </div>
       </div>
       <div class="row items-row">
         <div class="col-12">
           <div id="item-5" class="item">
-            Gestion de problématiques techniques transverses
+            <p>Gestion de problématiques techniques transverses</p>
             <span class="info-icon">i</span>
-            <span class="info-data">TODO: ajouter texte</span>
+            <span class="info-data center">
+              <ul class="arrow-list">
+                <li>Identité et accès</li>
+                <li>Performances</li>
+                <li>Sécurité</li>
+              </ul>
+            </span>
           </div>
         </div>
       </div>
