feat: CII en bas

--- a/pages/offre.html
+++ b/pages/offre.html
@@ -118,12 +118,9 @@ order: 1
     <div class="row">
       <h1 class="section-heading">Prestations de services</h1>
     </div>
-    <div class="row col-lg-10 offset-lg-1 col-md-12">
-      <p class="text-grey mt-3 text-justify impots">En regard à ses compétences et expériences, <b>DEVmachine est agréée CII</b> (Crédit Impôt Innovation) pour les années 2021 à 2025.<br/>Ce dispositif permet à nos clients de bénéficier de <b>20% de crédit d’impôt</b> sur les sociétés pour les dépenses engagées dans les prestations que nous réalisons pour eux.</p>
-    </div>
 
     <!-- Liste des prestations -->
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row col-lg-10 offset-lg-1 col-md-12 prestation bg-blue">
       <a class="anchor" name="offre-1"></a>
       <div class="info">
         <h1 class="title">1 - J’ai une idée mais je ne sais pas comment exprimer mon besoin</h1>
@@ -141,7 +138,7 @@ order: 1
       </div>
     </div>
 
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row col-lg-10 offset-lg-1 col-md-12 prestation bg-transparent">
       <a class="anchor" name="offre-2"></a>
       <div class="illustration growing">
         <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Growing.svg" />
@@ -172,7 +169,7 @@ order: 1
       </div>
     </div>
 
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row col-lg-10 offset-lg-1 col-md-12 prestation bg-blue">
       <a class="anchor" name="offre-3"></a>
       <div class="info">
         <h1 class="title">3 - Je souhaite renforcer mon équipe de développement pour accélérer la mise à disposition de ma solution</h1>
@@ -193,7 +190,7 @@ order: 1
       </div>
     </div>
 
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row col-lg-10 offset-lg-1 col-md-12 prestation bg-transparent">
       <a class="anchor" name="offre-4"></a>
       <div class="illustration">
         <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Confettis.svg" />
@@ -215,7 +212,7 @@ order: 1
       </div>
     </div>
 
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row col-lg-10 offset-lg-1 col-md-12 prestation bg-blue">
       <a class="anchor" name="offre-5"></a>
       <div class="info">
         <h1 class="title">5 - Je souhaite industrialiser et fluidifier la production logicielle de mes projets pour accélérer le time-to-market</h1>
@@ -239,7 +236,7 @@ order: 1
       </div>
     </div>
 
-    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row col-lg-10 offset-lg-1 col-md-12 prestation bg-transparent">
       <a class="anchor" name="offre-6"></a>
       <div class="illustration">
         <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Balls.svg" />
@@ -263,6 +260,11 @@ order: 1
         </div>
       </div>
     </div>
+
+    <div class="row col-lg-10 offset-lg-1 col-md-12 prestation cii">
+      <p class="text-grey mt-3 text-justify impots">En regard à ses compétences et expériences, <b>DEVmachine est agréée CII</b> (Crédit Impôt Innovation) pour les années 2021 à 2025.<br/>Ce dispositif permet à nos clients de bénéficier de <b>20% de crédit d’impôt</b> sur les sociétés pour les dépenses engagées dans les prestations que nous réalisons pour eux.</p>
+    </div>
+
   </div>
 </section>
 
