feat: nos prestations en pyramide

--- a/index.html
+++ b/index.html
@@ -123,40 +123,36 @@ exclude-nav: true
       <h2 class="section-subheading">Une réponse à chacune de vos questions</h2>
     </div>
     <div class="questions">
-      <div class="question-item-container">
+      <div class="row questions-row">
         <a class="dm-btn question-item" href="/offre#offre-1">
-          <span>J’ai une idée mais je ne sais pas comment exprimer mon besoin</span><!--
-          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          <span>J’ai une idée mais je ne sais pas comment exprimer mon besoin</span>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
         </a>
-      </div>
-      <div class="question-item-container">
         <a class="dm-btn question-item float-right" href="/offre#offre-4">
-          <span>Je souhaite désengorger ma dette technique ou challenger ma stack technique</span><!--
-          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          <span>Je souhaite désengorger ma dette technique ou challenger ma stack technique</span>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
         </a>
       </div>
-      <div class="question-item-container">
+
+      <div class="row questions-row">
         <a class="dm-btn question-item" href="/offre#offre-2">
-          <span>Je souhaite faire développer ou faire évoluer une solution</span><!--
-          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          <span>Je souhaite faire développer ou faire évoluer une solution</span>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
         </a>
-      </div>
-      <div class="question-item-container">
         <a class="dm-btn question-item float-right" href="/offre#offre-5">
-          <span>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</span><!--
-          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          <span>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</span>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
         </a>
       </div>
-      <div class="question-item-container">
+
+      <div class="row questions-row">
         <a class="dm-btn question-item" href="/offre#offre-3">
-          <span>Je souhaite renforcer mon équipe de développement</span><!--
-          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          <span>Je souhaite renforcer mon équipe de développement</span>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
         </a>
-      </div>
-      <div class="question-item-container">
         <a class="dm-btn question-item float-right" href="/offre#offre-6">
-          <span>Je souhaite déployer dans le Cloud ou sur les stores, ou automatiser les déploiements</span><!--
-          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+          <span>Je souhaite déployer dans le Cloud ou sur les stores, ou automatiser les déploiements</span>
+          <span aria-hidden="true" class="fas fa-chevron-right"></span>
         </a>
       </div>
     </div>
