feat: texte pour recrutement

--- a/pages/recrutement.html
+++ b/pages/recrutement.html
@@ -38,8 +38,44 @@ order: 6
     </div>
 
     <div class="col-12 recrutement-posts">
+      <!-- OFFRE 1 -->
       <div class="col-lg-6 col-md-12 m-0 p-3">
+        <div class="recrutement-post h-100">
+          <div class="heading">
+            <h4>Développeur JavaScript full-stack</h4>
+          </div>
 
+          <div class="d-flex contract-data">
+            <span class="contract-cdi">CDI</span>
+            <span class="contract-full-time">Temps complet</span>
+            <span class="contract-location">Rennes</span>
+          </div>
+
+          <span class="description">
+            Afin de renforcer notre équipe, nous recherchons un développeur JavaScript full-stack. Intégré à des projets à taille humaine dans nos locaux, vous aurez en charge :
+            <ul class="arrow-list">
+              <li>le développement applicatif dans une approche full-stack</li>
+              <li>la contribution, au sein du collectif, à la mise en place et à l’amélioration des pratiques de développement pour le projet</li>
+              <li>la prise en charge de chantiers techniques spécifiques au projet, selon vos aspirations et vos compétences.</li>
+            </ul>
+          </span>
+
+          <!-- div vide pour pousser le btn en bas -->
+          <div class="empty-space"></div>
+
+          <div class="btn-container">
+            <a class="dm-btn dm-btn-orange" target="_blank" href="https://lepoool.tech/offres-d-emploi/recmnb4ilMTYv9phA/">
+              Lire l'annonce<span aria-hidden="true" class="fas fa-external-link-alt"></span>
+            </a>
+            <a class="dm-btn dm-btn-blue" target="_blank" href="/contact">
+              Postuler<span aria-hidden="true" class="fas fa-external-link-alt"></span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- OFFRE 2 -->
+      <div class="col-lg-6 col-md-12 m-0 p-3">
         <div class="recrutement-post h-100">
           <div class="heading">
             <h4>Développeur Java / JavaScript</h4>
@@ -48,20 +84,30 @@ order: 6
           <div class="d-flex contract-data">
             <span class="contract-cdi">CDI</span>
             <span class="contract-full-time">Temps complet</span>
+            <span class="contract-location">Rennes</span>
           </div>
 
-          <p class="description">Petite description du poste.<br />Petite description du poste.</p>
+          <span class="description">
+            Afin de renforcer notre équipe, nous recherchons un développeur Java / JS. Intégré à des projets à taille humaine dans nos locaux, vous aurez en charge :
+            <ul class="arrow-list">
+              <li>le développement applicatif dans une approche full-stack</li>
+              <li>la contribution, au sein du collectif, à la mise en place et à l’amélioration des pratiques de développement pour le projet</li>
+              <li>la prise en charge de chantiers techniques spécifiques au projet, selon vos aspirations et vos compétences.</li>
+            </ul>
+          </span>
 
           <!-- div vide pour pousser le btn en bas -->
           <div class="empty-space"></div>
 
           <div class="btn-container">
-            <a class="dm-btn dm-btn-orange" target="_blank" href="#">
+            <a class="dm-btn dm-btn-orange" target="_blank" href="https://lepoool.tech/offres-d-emploi/reclz7nmhUYt1nUT3/">
               Lire l'annonce<span aria-hidden="true" class="fas fa-external-link-alt"></span>
+            </a>
+            <a class="dm-btn dm-btn-blue" target="_blank" href="/contact">
+              Postuler<span aria-hidden="true" class="fas fa-external-link-alt"></span>
             </a>
           </div>
         </div>
-
       </div>
     </div>
   </div>
