feat: improve recrutement

--- a/pages/recrutement.html
+++ b/pages/recrutement.html
@@ -46,9 +46,11 @@ order: 6
           </div>
 
           <div class="d-flex contract-data">
+            <span class="contract-location">
+              <img alt="" src="/assets/images/website/page-recrutement/pin.svg">Rennes
+            </span>
             <span class="contract-cdi">CDI</span>
             <span class="contract-full-time">Temps complet</span>
-            <span class="contract-location">Rennes</span>
           </div>
 
           <span class="description">
@@ -67,8 +69,9 @@ order: 6
             <a class="dm-btn dm-btn-orange" target="_blank" href="https://lepoool.tech/offres-d-emploi/recmnb4ilMTYv9phA/">
               Lire l'annonce<span aria-hidden="true" class="fas fa-external-link-alt"></span>
             </a>
-            <a class="dm-btn dm-btn-blue" target="_blank" href="/contact">
-              Postuler<span aria-hidden="true" class="fas fa-external-link-alt"></span>
+            <a class="dm-btn dm-btn-white postuler" href="mailto:contact@devmachine.fr">
+              <p>Postuler</p>
+              <img alt="" src="/assets/images/website/page-recrutement/Mail.svg" />
             </a>
           </div>
         </div>
@@ -82,9 +85,11 @@ order: 6
           </div>
 
           <div class="d-flex contract-data">
+            <span class="contract-location">
+              <img alt="" src="/assets/images/website/page-recrutement/pin.svg">Rennes
+            </span>
             <span class="contract-cdi">CDI</span>
             <span class="contract-full-time">Temps complet</span>
-            <span class="contract-location">Rennes</span>
           </div>
 
           <span class="description">
@@ -103,8 +108,9 @@ order: 6
             <a class="dm-btn dm-btn-orange" target="_blank" href="https://lepoool.tech/offres-d-emploi/reclz7nmhUYt1nUT3/">
               Lire l'annonce<span aria-hidden="true" class="fas fa-external-link-alt"></span>
             </a>
-            <a class="dm-btn dm-btn-blue" target="_blank" href="/contact">
-              Postuler<span aria-hidden="true" class="fas fa-external-link-alt"></span>
+            <a class="dm-btn dm-btn-white postuler" href="mailto:contact@devmachine.fr">
+              <p>Postuler</p>
+              <img alt="" src="/assets/images/website/page-recrutement/Mail.svg" />
             </a>
           </div>
         </div>
