feat: text justify + savoir-faire texts

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -10,7 +10,7 @@ order: 3
       <div class="col-md-6 col-sm-12">
         <div>
           <h1 class="section-heading">En savoir plus sur DEVmachine</h1>
-          <p class="text-grey">DEVmachine a été créée fin 2018 en partageant une vision commune sur :</p>
+          <p class="text-grey">DEVmachine a été créée en partageant une vision commune sur :</p>
           <ul class="arrow-list text-blue">
             <li>Un positionnement fort en tant qu’acteur du service numérique, que nous retrouvons dans notre offre de services et nos savoir-faire</li>
             <li>La nécessité de s’appuyer sur un collectif</li>
@@ -75,7 +75,7 @@ order: 3
     <div class="row align-items-center dm-item">
       <div class="col-md-8 col-sm-12">
         <h2>Le recrutement</h2>
-        <p class="text-grey text-justify">L’équipe choisit ses futurs collègues. Vient qui veut aux échanges avec les candidats, pour une délibération collective dès la fin de RV avec nécessité de l’unanimité pour avancer davantage avec le candidat.</p>
+        <p class="text-grey text-justify">L’équipe choisit ses futurs collègues. Vient qui veut aux échanges avec les candidats, pour une délibération collective dès la fin du rendez-vous avec nécessité de l’unanimité pour avancer davantage avec le candidat.</p>
       </div>
       <div class="col-md-3 offset-md-1 col-sm-12 text-center">
         <img class="w-100" alt="" src="/assets/images/website/page-dm/force/Interview.svg"/>
