--- a/pages/offre.html
+++ b/pages/offre.html
@@ -262,7 +262,14 @@ order: 1
     </div>
 
     <div class="row col-lg-10 offset-lg-1 col-md-12 prestation cii">
-      <p class="text-grey mt-3 text-justify impots">En regard à ses compétences et expériences, <b>DEVmachine est agréée CII</b> (Crédit Impôt Innovation) pour les années 2021 à 2025.<br/>Ce dispositif permet à nos clients de bénéficier de <b>20% de crédit d’impôt</b> sur les sociétés pour les dépenses engagées dans les prestations que nous réalisons pour eux.</p>
+      <div class="info">
+        <p class="text-grey text-justify">
+          En regard à ses compétences et expériences, <b>DEVmachine est agréée CII</b> (Crédit Impôt Innovation) pour les années 2021 à 2025.<br/>Ce dispositif permet à nos clients de bénéficier de <b>20% de crédit d’impôt</b> sur les sociétés pour les dépenses engagées dans les prestations que nous réalisons pour eux.
+        </p>
+      </div>
+      <div class="illustration">
+        <img class="w-90" alt="" src="/assets/images/website/page-offre/prestations/cii.png" />
+      </div>
     </div>
 
   </div>
