--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -114,7 +114,7 @@ order: 3
       </div>
       <div class="col-md-6 col-sm-12">
         <h2>Adhérent "Produit en Bretagne"</h2>
-        <p class="text-justify">Depuis 2022, DEVmachine est adhérent du réseau "Produit en Bretagne", étendard de savoir-faire de la région Bretagne.</p>
+        <p class="text-justify">Depuis 2022, DEVmachine est adhérent du réseau "Produit en Bretagne", étendard du savoir-faire de la région Bretagne.</p>
       </div>
     </div>
 
