--- a/pages/offre.html
+++ b/pages/offre.html
@@ -261,6 +261,8 @@ order: 1
       </div>
     </div>
 
+    <hr class="separate" />
+
     <div class="row col-lg-10 offset-lg-1 col-md-12 prestation cii">
       <div class="illustration">
         <img class="w-90" alt="" src="/assets/images/website/page-offre/prestations/cii.png" />
